# basalt

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: cd.yml  check.yml  ci.yml  eslint.mjs  lint.sh  release.yml  test.yml
client/: .prettierignore  .prettierrc.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
client/app/: globals.css  home.css  layout.tsx  page.tsx
client/app/competitor/: QuestionNavbar.tsx  competitor.css  page.tsx
client/app/host/: HeaderMenu.tsx  HostNavbar.tsx  NewQuestionDialog.tsx  NewTeamDialog.tsx  QuestionAccordion.tsx  host.css  page.tsx
client/app/leaderboard/: page.tsx
client/components/: CompetitorNavbar.tsx  HostNavbar.tsx  Nav.tsx  SettingsMenu.tsx  Timer.tsx  UserMenu.tsx
client/components/ui/: NewTeamDialog.tsx  accordion.tsx  alert-dialog.tsx  checkbox.tsx  command.tsx  dropdown-menu.tsx  form.tsx  menubar.tsx  navigation-menu.tsx  select.tsx
client/hooks/: use-toast.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
embeddable-web-client/: Cargo.toml
embeddable_web_client/: Cargo.toml
