[package]
name = "basalt"
version = "0.1.0"
description = "Basalt competitive programming client application"
authors = ["jackjohn7", "funnyboy-roks"]
license = "Apache-2.0"
repository = "https://github.com/basalt-rs/basalt"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
